# ldapgate

./: .gitignore  README.md  ldapgate.yaml.example  pyproject.toml
docker/: Dockerfile  alice.ldif  docker-compose.yml  ldapgate.local.yaml
ldapgate/: __init__.py  _auth_utils.py  _signer.py  cli.py  config.py  ldap.py  middleware.py  proxy.py  sessions.py
ldapgate/templates/: login.html
tests/: __init__.py  test_auth_utils.py  test_config.py  test_ldap.py  test_proxy.py  test_sessions.py  test_signer.py
