[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ldapgate"
version = "0.1.3"
description = "Lightweight LDAP/AD authentication proxy and FastAPI middleware"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Anudeep D", email = "anudeep@example.com"}]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "ldap3>=2.9.1",
    "httpx>=0.27",
    "itsdangerous>=2.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx[http2]>=0.27",
]

[project.scripts]
ldapgate = "ldapgate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ldapgate"]
